--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,23 @@
-.App {
-  text-align: center;
-}
+ .title {
+   font-family: "Carter One";
+ }
+ .container {
+   margin-top: 50px;
+   text-align: center;
+ }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ /* Optional style for fetched images */
+ .images {
+   display: flex;
+   max-width: 80%;
+   margin: 2% auto;
+   flex-wrap: wrap;
+   align-items: flex-start;
+ }
+ .single-photo {
+   max-width: 300px;
+   align-self: auto;
+   margin: 1% 2px;
+   flex-grow: 1;
+   vertical-align: middle;
+ }
